[package]
name = "rdatascience-tut1"
version = "0.1.0"
authors = ["Davide Del Papa <davidedelpapa@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
noisy_float = "0.2.0"
poloto = "2.17.0"
